Blender cycles volumetric rendering bug #54420

Closed
opened 2018-03-25 15:26:46 +02:00 by roger bootsma · 20 comments

System Information
Windows 8 GTX 760

Blender Version
Broken: 2.78/2.79

Short description of error
Blender cycles showing artifacts of volumetric shaders when objects are in front of each other before the camera.

Exact steps for others to reproduce the error
In order to reproduce the effect, just open the blend file and hit render or preview render in order to see the concerning artifacts during rendering.

Thanks in advance,

Kind regards,blender volumetrics bug.blend

Volumetrics bug.jpg

**System Information** Windows 8 GTX 760 **Blender Version** Broken: 2.78/2.79 **Short description of error** Blender cycles showing artifacts of volumetric shaders when objects are in front of each other before the camera. **Exact steps for others to reproduce the error** In order to reproduce the effect, just open the blend file and hit render or preview render in order to see the concerning artifacts during rendering. Thanks in advance, Kind regards,[blender volumetrics bug.blend](https://archive.blender.org/developer/F2505728/blender_volumetrics_bug.blend) ![Volumetrics bug.jpg](https://archive.blender.org/developer/F2505729/Volumetrics_bug.jpg)
Author

Added subscriber: @rogerbootsma

Added subscriber: @rogerbootsma
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

thought this might be fixed due to recent work in this area, but can still reproduce with latest master

thought this might be fixed due to recent work in this area, but can still reproduce with latest master
Author

Hello LazyDodo,

Thank you for your quick view on this. If i may ask, what would be your prognosis for this bug to be solved?
I am asking since i am working on a project and this bug is disabling me to continue.

Thanks again.

Kind regards,

Hello LazyDodo, Thank you for your quick view on this. If i may ask, what would be your prognosis for this bug to be solved? I am asking since i am working on a project and this bug is disabling me to continue. Thanks again. Kind regards,

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

I only do the initial triaging, someone from the cycles team will have to take a closer look at this point.

I only do the initial triaging, someone from the cycles team will have to take a closer look at this point.
Author

Ok thanks LazyDodo, I will just wait and see what happens

Ok thanks LazyDodo, I will just wait and see what happens

Added subscriber: @YAFU

Added subscriber: @YAFU

Here Linux, just making observations. In Blender 2.79 official release I can see the black hole and a lot of noise around it. Increasing light paths > Max Transparency to 16 the black hole improves a bit, still a lot of noise around.

From master/buildbot the black hole does not appear in scene. But that area with strange strong noise still needs very many samples to improve compared to the rest.

Here Linux, just making observations. In Blender 2.79 official release I can see the black hole and a lot of noise around it. Increasing light paths > Max Transparency to 16 the black hole improves a bit, still a lot of noise around. From master/buildbot the black hole does not appear in scene. But that area with strange strong noise still needs very many samples to improve compared to the rest.

Hi there,

I can also confirm the bug on Linux Mint 18.3. Very strange. The only setting that kind of changes anything is the "Step Size" of the volume sampling.
I know how it feels like to hit a brickwall during a project. If you can live with ~3 times the rendering time but get a result you might be able to live with, you can change the step size from the default 0.1 to something smaller like 0.01.
Here's the result:
Cycles_Volume_Bug_v01.png

I know it's not the final solution, but it might be enough to get the job done.

Hi there, I can also confirm the bug on Linux Mint 18.3. Very strange. The only setting that kind of changes anything is the "Step Size" of the volume sampling. I know how it feels like to hit a brickwall during a project. If you can live with ~3 times the rendering time but get a result you might be able to live with, you can change the step size from the default 0.1 to something smaller like 0.01. Here's the result: ![Cycles_Volume_Bug_v01.png](https://archive.blender.org/developer/F2506036/Cycles_Volume_Bug_v01.png) I know it's not the final solution, but it might be enough to get the job done.

Added subscriber: @brecht

Added subscriber: @brecht

I need to look into it in detail, but reducing the step size may end up being the correct solution.

If the step size is significantly bigger than the features in the volume, most samples will miss those features. Things get worse if you have many such features behind each other, as is the case here.

I need to look into it in detail, but reducing the step size may end up being the correct solution. If the step size is significantly bigger than the features in the volume, most samples will miss those features. Things get worse if you have many such features behind each other, as is the case here.
Author

It seems this is not possible for me because i have to render other renderlayers, i will however increase sample and crank up the denoiser for that layer, which seem to work ok for the scene. Thanks for your help and i hope that the noise issue could be solved in the future.

Thanks again.

Kind regards,

It seems this is not possible for me because i have to render other renderlayers, i will however increase sample and crank up the denoiser for that layer, which seem to work ok for the scene. Thanks for your help and i hope that the noise issue could be solved in the future. Thanks again. Kind regards,

This issue was referenced by blender/cycles@a48ca02e59

This issue was referenced by blender/cycles@a48ca02e59f317e5e7cd588167955dd9566c04b2

This issue was referenced by a7aee250b8

This issue was referenced by a7aee250b82161592bb673adf59508e759a867f4

Fixed now in master, there was a bug.

Before After
volume_step_before.png volume_step_after.png
Fixed now in master, there was a bug. |Before|After| | -- | -- | |![volume_step_before.png](https://archive.blender.org/developer/F2513580/volume_step_before.png)|![volume_step_after.png](https://archive.blender.org/developer/F2513579/volume_step_after.png)|

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Render looks great and using only 47 samples. Thanks Brecht.
It seems that Roger will be able to save a lot of render time using default value of step size.
Unfortunately it seems that Buildbot is having problems to build Windows versions.

Render looks great and using only 47 samples. Thanks Brecht. It seems that Roger will be able to save a lot of render time using default value of step size. Unfortunately it seems that Buildbot is having problems to build Windows versions.
Author

Wow thanks you guys for all the effort. Unfortunately i only have windows :(
Well I hope that maybe the windows version can be build as well.

actually even the overall render looks better even for the singular blobs.

Many thanks :)

Best regards,

Wow thanks you guys for all the effort. Unfortunately i only have windows :( Well I hope that maybe the windows version can be build as well. actually even the overall render looks better even for the singular blobs. Many thanks :) Best regards,
Author

Wow you guys, you actually did it. looking at a perfect 50 samples render of the concerning bug file. You guys are awesome. Actually this stuff is for a blender course i am making. Be sure that i will talk about the awesome work and support you all are giving to the blender community.

You guys have my graditude and support :)

All the best

Wow you guys, you actually did it. looking at a perfect 50 samples render of the concerning bug file. You guys are awesome. Actually this stuff is for a blender course i am making. Be sure that i will talk about the awesome work and support you all are giving to the blender community. You guys have my graditude and support :) All the best
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54420
No description provided.